style: 💄 Update SDK color palette base and variables

--- a/packages/components/Input/Keyboard.html
+++ b/packages/components/Input/Keyboard.html
@@ -408,7 +408,7 @@
       width: 34px;
 
       &.enter-key {
-        background-color: $green;
+        background-color: $green-500;
       }
     }
 
