--- a/packages/components/Progress/ProgressBar.html
+++ b/packages/components/Progress/ProgressBar.html
@@ -33,7 +33,7 @@
     display: block;
     width: 100%;
     overflow: hidden;
-    background-color: $green;
+    background-color: $green-500;
   }
 
   .progress {
