--- a/packages/pos/simulator/view/pos/apps/Launcher.html
+++ b/packages/pos/simulator/view/pos/apps/Launcher.html
@@ -215,7 +215,7 @@
   }
 
   time {
-    color: $gray;
+    color: $neutral-500;
     display: block;
     margin-top: 35px;
     font-size: 64px;
@@ -230,7 +230,7 @@
 
   .home {
     padding: 5px;
-    background-color: $gray-lighter;
+    background-color: $neutral-100;
     font-size: 0;
   }
 
