--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -1,46 +1,60 @@
-$black: #000;
-
-$white: #fff;
 $seashell: #f1f1f1;
 
-$stone-green: #4fb341;
-$stone-green-dark: #153522;
-$stone-green-light: #a6df8c;
+$neutral-900: #171a23; /* $gray-darker: #353535; */
+$neutral-800: #232a38;
+$neutral-700: #2f3846; /* $gray-dark: #425963; $blue-gray-dark: #455a64; */
+$neutral-600: #4a5668; /* $blue-gray: #607d8b;  */
+$neutral-500: #7e8da0; /* $gray: #7e7e7e; */
+$neutral-400: #a0aec0; /* $blue-gray-light: #90a4ae; */
+$neutral-300: #c6d0dc; /* $gray-light: #b5b5b5; $silver: #bab9b9; */
+$neutral-200: #e3e8ef;
+$neutral-100: #f1f4f8; /* $gray-lighter: #e3e6e7; $silver-light: #dcdcdc; */
+$neutral-50: #f9faf8; /* $gray-lightest: #f1f2f3; */
 
-$gray-darker: #353535;
-$gray-dark: #425963;
-$gray: #7e7e7e;
-$gray-light: #b5b5b5;
-$gray-lighter: #e3e6e7;
-$gray-lightest: #f1f2f3;
+$green-700: #006649; /* $stone-green-dark: #153522; $green-dark: #3da10f; */
+$green-600: #008b57; /* $teal-dark: #00af98; */
+$green-500: #00a962; /* $stone-green: #4fb341; $green-payment: #429841; $green: #4ebf1a; */
+$green-400: #00d681; /* $teal: #19e3b1; */
+$green-300: #4ff0a1; /* $stone-green-light: #a6df8c; $grean-light: #4caf50; */
+$green-200: #bcfbdc;
+$green-100: #dafbeb;
 
-$silver: #bab9b9;
-$silver-light: #dcdcdc;
+$blue-700: #00699e; /* $blue-dark: #1565c0; */
+$blue-600: #007fbf;
+$blue-500: #0091d9;
+$blue-400: #16a9f3; /* $blue: #2196f3; */
+$blue-300: #79caf2;
+$blue-200: #b3e6ff;
+$blue-100: #e0f5ff;
 
-$red: #ff1a1a;
-$red-dark: #d50000;
-$red-light: #e85b5b;
+$purple-700: #583294; /* $purple-dark: #790e8b; */
+$purple-600: #6a43aa;
+$purple-500: #7d54c0; /* $purple: #ab47bc; */
+$purple-400: #9d77d9;
+$purple-300: #aa8dd9; /* $purple-light: #df78ef; */
+$purple-200: #d8c7f5;
+$purple-100: #f0e6ff;
 
-/* --- */
+$red-700: #cc1b00; /* $red-dark: #d50000; */
+$red-600: #e9290c; /* $red: #ff1a1a; */
+$red-500: #ff4124;
+$red-400: #ff644c; /* $red-light: #e85b5b; */
+$red-300: #ff998a;
+$red-200: #ffd7d1;
+$red-100: #ffedeb;
 
-$blue: #2196f3;
-$blue-dark: #1565c0;
+$orange-700: #c15005;
+$orange-600: #e76006;
+$orange-500: #f9741b;
+$orange-400: #fa924c;
+$orange-300: #ffe380;
+$orange-200: #fedec8;
+$orange-100: #fff0e5;
 
-$blue-gray-light: #90a4ae;
-$blue-gray: #607d8b;
-$blue-gray-dark: #455a64;
-
-$green: #4ebf1a;
-$grean-light: #4caf50;
-$green-dark: #3da10f;
-$green-payment: #429841;
-
-$purple: #ab47bc;
-$purple-dark: #790e8b;
-$purple-light: #df78ef;
-
-$teal: #19e3b1;
-$teal-dark: #00af98;
-
-$yellow: #f9a825;
-$yellow-dark: #f57f17;
+$yellow-700: #cc7a00;
+$yellow-600: #fc9803; /* $yellow-dark: #f57f17; */
+$yellow-500: #ffab00;
+$yellow-400: #ffca1a; /* $yellow: #f9a825; */
+$yellow-300: #ffe380;
+$yellow-200: #fff0b3;
+$yellow-100: #fff7d6;
