--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -1,49 +1,49 @@
 @import 'colors.pcss';
 
-$default-text-color: $gray-darker;
+$default-text-color: $neutral-900;
 $default-font-size: 13px;
 
-$app-bg-color: $gray-lighter;
+$app-bg-color: $neutral-100;
 
 /** Row component */
 $row-padding: 12px 15px;
 $row-top-height: auto;
-$row-border-color: $gray-lighter;
+$row-border-color: $neutral-100;
 $row-bg-color: $white;
-$row-primary-color: $gray-darker;
-$row-secondary-color: $gray;
+$row-primary-color: $neutral-900;
+$row-secondary-color: $neutral-500;
 $row-font-size: 14px;
 
 /** Input component */
-$input-border-color: $gray-lighter;
-$input-focus-border-color: $stone-green;
-$input-invalid-border-color: $red-light;
-$input-error-color: $red-light;
+$input-border-color: $neutral-100;
+$input-focus-border-color: $green-500;
+$input-invalid-border-color: $red-400;
+$input-error-color: $red-400;
 
 /** Dialog component */
-$dialog-negative-color: $red-light;
-$dialog-positive-color: $stone-green;
-$dialog-confirmation-primary-color: $gray-dark;
+$dialog-negative-color: $red-400;
+$dialog-positive-color: $green-500;
+$dialog-confirmation-primary-color: $neutral-700;
 $dialog-confirmation-text-color: $white;
 
 /** AdminLock component */
-$adminlock-negative-color: $red-light;
-$adminlock-text-color: $gray-dark;
+$adminlock-negative-color: $red-400;
+$adminlock-text-color: $neutral-700;
 $adminlock-background-color: #f0f0f0;
 
-$button-primary-color: $green;
+$button-primary-color: $green-500;
 $button-text-color: $white;
 
-$switch-unchecked-bg: $silver;
+$switch-unchecked-bg: $neutral-300;
 $switch-unchecked-color: $seashell;
-$switch-checked-bg: $stone-green-light;
-$switch-checked-color: $green;
-$switch-disabled-bg: $silver-light;
-$switch-disabled-color: $silver;
+$switch-checked-bg: $green-300;
+$switch-checked-color: $green-500;
+$switch-disabled-bg: $neutral-100;
+$switch-disabled-color: $neutral-300;
 
 /* Tabs component */
 $tab-navigation-bg: #f2f2f2;
 $tab-label-color: #65777f;
 $tab-item-font-size: 13px;
-$tab-line-color: $green;
+$tab-line-color: $green-500;
 $tab-height: 40px;
