--- a/packages/components/Icon/Icon.html
+++ b/packages/components/Icon/Icon.html
@@ -113,7 +113,7 @@
 
   [symbol='wifi'] {
     position: relative;
-    background-color: $gray-light;
+    background-color: $neutral-300;
 
     &::before {
       content: '';
