--- a/packages/styles/src/includes/components/row.pcss
+++ b/packages/styles/src/includes/components/row.pcss
@@ -9,15 +9,15 @@
   font-size: $row-font-size;
 
   &.-light {
-    background-color: $gray-lightest;
-    border-bottom-color: $gray-lighter;
+    background-color: $neutral-100;
+    border-bottom-color: $neutral-100;
   }
 
   &.-border-top {
     border-top: 1px solid $row-border-color;
 
     &.-light {
-      border-bottom-color: $gray-lighter;
+      border-bottom-color: $neutral-100;
     }
   }
 }
