--- a/packages/styles/src/includes/helpers.pcss
+++ b/packages/styles/src/includes/helpers.pcss
@@ -23,19 +23,19 @@
 
 /** Colors */
 .h-color-gray-darker {
-  color: $gray-darker;
+  color: $neutral-900;
 }
 
 .h-color-gray {
-  color: $gray;
+  color: $neutral-500;
 }
 
 .h-color-gray-lighter {
-  color: $gray-lighter;
+  color: $neutral-100;
 }
 
 .h-color-gray-lightest {
-  color: $gray-lightest;
+  color: $neutral-50;
 }
 
 /** Text */
