style: 💄 palette colors on hex to new variable

--- a/packages/pos/simulator/view/pos/apps/Launcher.html
+++ b/packages/pos/simulator/view/pos/apps/Launcher.html
@@ -222,7 +222,7 @@
   }
 
   .merchant {
-    color: $black;
+    color: black;
     line-height: 1.2;
     font-size: 22px;
     margin: 8px 0 20px;
@@ -242,7 +242,7 @@
     vertical-align: middle;
     text-align: center;
     padding: 5px;
-    background-color: $white;
+    background-color: white;
     background-clip: content-box;
 
     &::before {
