--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -9,7 +9,7 @@ $app-bg-color: $neutral-100;
 $row-padding: 12px 15px;
 $row-top-height: auto;
 $row-border-color: $neutral-100;
-$row-bg-color: $white;
+$row-bg-color: white;
 $row-primary-color: $neutral-900;
 $row-secondary-color: $neutral-500;
 $row-font-size: 14px;
@@ -24,7 +24,7 @@ $input-error-color: $red-400;
 $dialog-negative-color: $red-400;
 $dialog-positive-color: $green-500;
 $dialog-confirmation-primary-color: $neutral-700;
-$dialog-confirmation-text-color: $white;
+$dialog-confirmation-text-color: white;
 
 /** AdminLock component */
 $adminlock-negative-color: $red-400;
@@ -32,7 +32,7 @@ $adminlock-text-color: $neutral-700;
 $adminlock-background-color: #f0f0f0;
 
 $button-primary-color: $green-500;
-$button-text-color: $white;
+$button-text-color: white;
 
 $switch-unchecked-bg: $neutral-300;
 $switch-unchecked-color: $seashell;
