--- a/packages/components/Printable/Printable.html
+++ b/packages/components/Printable/Printable.html
@@ -174,7 +174,7 @@
     font-size: 16px;
     line-height: 21px;
     text-align: center;
-    color: #353535;
+    color: $neutral-900;
   }
 
   .content {
