refactor: 💡 update money limit

--- a/packages/components/Input/Money.html
+++ b/packages/components/Input/Money.html
@@ -27,7 +27,7 @@
         cents: 0,
         prefix: 'R$ ',
         suffix: '',
-        limit: 99999999.99,
+        limit: 999999.99,
         validation: undefined,
         readonlyOnEnter: false,
       };
