style: 💄 update component colors to rebrand

--- a/packages/components/Carousel/Carousel.html
+++ b/packages/components/Carousel/Carousel.html
@@ -34,7 +34,7 @@
           'http://placehold.it/145x184/f67e7d/fff?text=Component',
         ],
         count: 0,
-        navBg: '#425963',
+        navBg: '#2f3846',
         navColor: '#ffffff',
       };
     },
