--- a/packages/components/Collection/Collection.html
+++ b/packages/components/Collection/Collection.html
@@ -25,7 +25,7 @@
     line-height: 1.5rem;
     background: #fff;
     border-bottom: 1px solid #f4f4f4;
-    color: #494949;
+    color: $neutral-700;
   }
 
   .title {
