--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -37,8 +37,8 @@
         /** Dialog open state */
         isOpen: false,
         title: undefined,
-        bgColor: '#e3e3e3',
-        textColor: '#353535',
+        bgColor: '#f1f4f8',
+        textColor: '#171a23',
         align: 'center',
         fullscreen: false,
         className: undefined,
