--- a/packages/components/Icon/Round.html
+++ b/packages/components/Icon/Round.html
@@ -11,7 +11,7 @@
       return {
         iconAttrs: {},
         borderRadius: '50%',
-        bgColor: '#4ebf1a',
+        bgColor: '#00a962',
         color: '#fff',
         size: 'normal',
       };
