--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -75,9 +75,9 @@
         type: 'text',
         align: 'right',
         bgColor: '#fff',
-        textColor: '#757575',
-        labelColor: '#757575',
-        errorColor: '#d50000',
+        textColor: '#7e8da0',
+        labelColor: '#7e8da0',
+        errorColor: '#cc1b00',
         /** Validation */
         validateOn: 'submit',
         validation: undefined,
