--- a/packages/components/Input/Keyboard.html
+++ b/packages/components/Input/Keyboard.html
@@ -400,7 +400,7 @@
     z-index: 1;
 
     &.is-active {
-      background-color: #c5c5c5;
+      background-color: $neutral-300;
       border-color: #f2f2f2;
     }
 
