--- a/packages/components/Input/example/Example.html
+++ b/packages/components/Input/example/Example.html
@@ -32,7 +32,7 @@
 
   <h4>Custom colored labeled input</h4>
   <div class="row">
-    <Input bgColor="#A8A9AD" textColor="white" label="Text"/>
+    <Input bgColor="#c6d0dc" textColor="white" label="Text"/>
   </div>
 
   <h4>Validated input</h4>
