--- a/packages/components/Progress/Circular.html
+++ b/packages/components/Progress/Circular.html
@@ -5,7 +5,7 @@
     data() {
       return {
         _interval: null,
-        color: '#6ebf1a',
+        color: '#00a962',
         progress: undefined,
         height: 25,
         speed: 10,
