--- a/packages/components/Progress/ProgressBar.html
+++ b/packages/components/Progress/ProgressBar.html
@@ -10,7 +10,7 @@
   export default {
     data() {
       return {
-        color: '#6ebf1a',
+        color: '#00a962',
         height: '6px',
         progress: undefined,
       };
