--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -2,18 +2,18 @@ $seashell: #f1f1f1;
 
 $neutral-900: #171a23; /* $gray-darker: #353535; */
 $neutral-800: #232a38;
-$neutral-700: #2f3846; /* $gray-dark: #425963; $blue-gray-dark: #455a64; */
-$neutral-600: #4a5668; /* $blue-gray: #607d8b;  */
-$neutral-500: #7e8da0; /* $gray: #7e7e7e; */
+$neutral-700: #2f3846; /* $gray-dark: #425963; $blue-gray-dark: #455a64; #494949; #5C666A */
+$neutral-600: #4a5668; /* $blue-gray: #607d8b; */
+$neutral-500: #7e8da0; /* $gray: #7e7e7e; #8c8c8c; #757575; */
 $neutral-400: #a0aec0; /* $blue-gray-light: #90a4ae; */
-$neutral-300: #c6d0dc; /* $gray-light: #b5b5b5; $silver: #bab9b9; */
+$neutral-300: #c6d0dc; /* $gray-light: #b5b5b5; $silver: #bab9b9; #A8A9AD; #c5c5c5; */
 $neutral-200: #e3e8ef;
-$neutral-100: #f1f4f8; /* $gray-lighter: #e3e6e7; $silver-light: #dcdcdc; */
+$neutral-100: #f1f4f8; /* $gray-lighter: #e3e6e7; $silver-light: #dcdcdc; #e3e3e3 */
 $neutral-50: #f9faf8; /* $gray-lightest: #f1f2f3; */
 
 $green-700: #006649; /* $stone-green-dark: #153522; $green-dark: #3da10f; */
 $green-600: #008b57; /* $teal-dark: #00af98; */
-$green-500: #00a962; /* $stone-green: #4fb341; $green-payment: #429841; $green: #4ebf1a; */
+$green-500: #00a962; /* $stone-green: #4fb341; $green-payment: #429841; $green: #4ebf1a; #95C93F */
 $green-400: #00d681; /* $teal: #19e3b1; */
 $green-300: #4ff0a1; /* $stone-green-light: #a6df8c; $grean-light: #4caf50; */
 $green-200: #bcfbdc;
