style: 💄 new colors to tabs and toast

--- a/packages/components/Tabs/example/Example.html
+++ b/packages/components/Tabs/example/Example.html
@@ -1,5 +1,5 @@
 <Tabs on:change="tabChanged(event)" bind:index="tabIndex">
-  <TabPane title="Ajuda">
+  <TabPane label="Ajuda">
     <Collection>
       <Row label="1 - Como funciona?" href="/" />
       <Row label="2 - Sobre taxas" href="/" />
@@ -7,7 +7,7 @@
       <Row label="4 - Fale conosco" href="/" />
     </Collection>
   </TabPane>
-  <TabPane title="Descrição">
+  <TabPane label="Descrição">
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic maiores mollitia asperiores delectus, deleniti nobis fugiat quas eaque aspernatur atque ex voluptate modi fuga, iusto minus magni reprehenderit libero numquam.
     </p>
