fix: 🐛 update variables to camcelCase

--- a/packages/components/Carousel/Carousel.html
+++ b/packages/components/Carousel/Carousel.html
@@ -20,6 +20,8 @@
 </div>
 
 <script>
+  import { neutral700 } from '@mamba/styles/colors';
+
   export default {
     components: {
       Icon: '@mamba/icon/Icon.html',
@@ -34,7 +36,7 @@
           'http://placehold.it/145x184/f67e7d/fff?text=Component',
         ],
         count: 0,
-        navBg: '#2f3846',
+        navBg: neutral700,
         navColor: '#ffffff',
       };
     },
