--- a/packages/components/Carousel/CarouselNavigation.html
+++ b/packages/components/Carousel/CarouselNavigation.html
@@ -27,6 +27,8 @@
 </div>
 
 <script>
+  import { neutral700 } from '@mamba/styles/colors';
+
   export default {
     components: {
       Icon: '@mamba/icon/Icon.html',
@@ -41,7 +43,7 @@
           'http://placehold.it/145x184/f67e7d/fff?text=Component',
         ],
         count: 0,
-        navBg: '#425963',
+        navBg: neutral700,
         navColor: '#ffffff',
         infinity: true,
       };
