--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -1,6 +1,6 @@
-@import 'colors.pcss';
+/* @import 'colors.pcss'; */
 
-$default-text-color: $neutral-900;
+$default-text-color: $neutral900;
 $default-font-size: 13px;
 
 $app-bg-color: $neutral-100;
@@ -8,42 +8,42 @@ $app-bg-color: $neutral-100;
 /** Row component */
 $row-padding: 12px 15px;
 $row-top-height: auto;
-$row-border-color: $neutral-100;
+$row-border-color: $neutral100;
 $row-bg-color: white;
-$row-primary-color: $neutral-900;
-$row-secondary-color: $neutral-500;
+$row-primary-color: $neutral900;
+$row-secondary-color: $neutral500;
 $row-font-size: 14px;
 
 /** Input component */
-$input-border-color: $neutral-100;
-$input-focus-border-color: $green-500;
-$input-invalid-border-color: $red-400;
-$input-error-color: $red-400;
+$input-border-color: $neutral100;
+$input-focus-border-color: $green500;
+$input-invalid-border-color: $red400;
+$input-error-color: $red400;
 
 /** Dialog component */
-$dialog-negative-color: $red-400;
-$dialog-positive-color: $green-500;
-$dialog-confirmation-primary-color: $neutral-700;
+$dialog-negative-color: $red400;
+$dialog-positive-color: $green500;
+$dialog-confirmation-primary-color: $neutral700;
 $dialog-confirmation-text-color: white;
 
 /** AdminLock component */
-$adminlock-negative-color: $red-400;
-$adminlock-text-color: $neutral-700;
+$adminlock-negative-color: $red400;
+$adminlock-text-color: $neutral700;
 $adminlock-background-color: #f0f0f0;
 
-$button-primary-color: $green-500;
+$button-primary-color: $green500;
 $button-text-color: white;
 
-$switch-unchecked-bg: $neutral-300;
+$switch-unchecked-bg: $neutral300;
 $switch-unchecked-color: $seashell;
-$switch-checked-bg: $green-300;
-$switch-checked-color: $green-500;
-$switch-disabled-bg: $neutral-300;
-$switch-disabled-color: $neutral-400;
+$switch-checked-bg: $green300;
+$switch-checked-color: $green500;
+$switch-disabled-bg: $neutral300;
+$switch-disabled-color: $neutral400;
 
 /* Tabs component */
 $tab-navigation-bg: #f2f2f2;
 $tab-label-color: #65777f;
 $tab-item-font-size: 13px;
-$tab-line-color: $green-500;
+$tab-line-color: $green500;
 $tab-height: 40px;
