--- a/packages/components/Carousel/example/Example.html
+++ b/packages/components/Carousel/example/Example.html
@@ -7,7 +7,7 @@
 
   <h4>Personalizado</h4>
   <div class="row">
-    <Carousel slides={slides} navBg="#4ebf1a" navColor="#425963" />
+    <Carousel slides={slides} navBg={green500} navColor={neutral700} />
   </div>
 
 </div>
@@ -44,11 +44,16 @@
 </style>
 
 <script>
+  import { green500, neutral700 } from '@mamba/styles/colors';
+
   export default {
     components: {
       Carousel: '@mamba/carousel',
     },
-
+    helpers: {
+      green500,
+      neutral700,
+    },
     data() {
       return {
         slides: ['http://placehold.it/145x184/293462/fff?text=Images+via+props',
