--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -31,14 +31,16 @@
 
   let lastShortcutsState = undefined;
 
+  import { neutral100, neutral900 } from '@mamba/styles/colors';
+
   export default {
     data() {
       return {
         /** Dialog open state */
         isOpen: false,
         title: undefined,
-        bgColor: '#f1f4f8',
-        textColor: '#171a23',
+        bgColor: neutral100,
+        textColor: neutral900,
         align: 'center',
         fullscreen: false,
         className: undefined,
