--- a/packages/components/Progress/Circular.html
+++ b/packages/components/Progress/Circular.html
@@ -1,11 +1,13 @@
 <canvas ref:canvas></canvas>
 
 <script>
+  import { green500 } from '@mamba/styles/colors';
+
   export default {
     data() {
       return {
         _interval: null,
-        color: '#00a962',
+        color: {green500},
         progress: undefined,
         height: 25,
         speed: 10,
