fix: 🐛 wrong replace

--- a/packages/components/Progress/Circular.html
+++ b/packages/components/Progress/Circular.html
@@ -7,7 +7,7 @@
     data() {
       return {
         _interval: null,
-        color: {green500},
+        color: green500,
         progress: undefined,
         height: 25,
         speed: 10,
