fix: 🐛 wrong color importing

--- a/packages/components/Dialog/Confirmation.html
+++ b/packages/components/Dialog/Confirmation.html
@@ -65,6 +65,10 @@
         primaryColor: undefined,
       };
     },
+    helpers: {
+      red600,
+      green500,
+    },
     computed: {
       _dialogProps: ({ positiveLabel, negativeLabel, primaryColor, ...props }) =>
         props,
