--- a/packages/components/Icon/Round.html
+++ b/packages/components/Icon/Round.html
@@ -3,8 +3,6 @@
 </div>
 
 <script>
-  import { green500 } from '@mamba/styles/colors';
-
   export default {
     components: {
       Icon: './Icon.html',
@@ -13,7 +11,7 @@
       return {
         iconAttrs: {},
         borderRadius: '50%',
-        bgColor: green500,
+        bgColor: '#4ebf1a',
         color: '#fff',
         size: 'normal',
       };
