--- a/packages/components/Progress/Circular.html
+++ b/packages/components/Progress/Circular.html
@@ -1,13 +1,11 @@
 <canvas ref:canvas></canvas>
 
 <script>
-  import { green500 } from '@mamba/styles/colors';
-
   export default {
     data() {
       return {
         _interval: null,
-        color: green500,
+        color: '#4ebf1a',
         progress: undefined,
         height: 25,
         speed: 10,
