--- a/packages/components/Range/Range.html
+++ b/packages/components/Range/Range.html
@@ -24,8 +24,6 @@
 </div>
 
 <script>
-  import { green700, neutral700 } from '@mamba/styles/colors';
-
   export default {
     data() {
       return {
@@ -36,8 +34,8 @@
         value: 0,
         unit: '%',
         validation: undefined,
-        mainColor: green700,
-        textColor: neutral700,
+        mainColor: '#153522',
+        textColor: '#425963',
         barColor: '#000',
       };
     },
@@ -130,7 +128,7 @@
 
   .bar {
     height: 6px;
-    background-color: $green700;
+    background-color: #153522;
   }
 
   button {
