--- a/packages/components/Toast/Toast.html
+++ b/packages/components/Toast/Toast.html
@@ -4,9 +4,9 @@
 
 <style>
 .toast {
-  background-color: $neutral100;
+  background-color: #e3e6e7;
   padding: 10px 15px;
-  color: $neutral700;
+  color: #425963;
   font-size: 11px;
   line-height: 12px;
   position: fixed;
