--- a/packages/components/Carousel/Carousel.html
+++ b/packages/components/Carousel/Carousel.html
@@ -20,8 +20,6 @@
 </div>
 
 <script>
-  import { neutral700 } from '@mamba/styles/colors';
-
   export default {
     components: {
       Icon: '@mamba/icon/Icon.html',
@@ -36,7 +34,7 @@
           'http://placehold.it/145x184/f67e7d/fff?text=Component',
         ],
         count: 0,
-        navBg: neutral700,
+        navBg: '#425963',
         navColor: '#ffffff',
       };
     },
