--- a/packages/components/Carousel/CarouselNavigation.html
+++ b/packages/components/Carousel/CarouselNavigation.html
@@ -27,8 +27,6 @@
 </div>
 
 <script>
-  import { neutral700 } from '@mamba/styles/colors';
-
   export default {
     components: {
       Icon: '@mamba/icon/Icon.html',
@@ -43,7 +41,7 @@
           'http://placehold.it/145x184/f67e7d/fff?text=Component',
         ],
         count: 0,
-        navBg: neutral700,
+        navBg: '#425963',
         navColor: '#ffffff',
         infinity: true,
       };
