--- a/packages/components/Collection/Collection.html
+++ b/packages/components/Collection/Collection.html
@@ -25,11 +25,11 @@
     line-height: 1.5rem;
     background: #fff;
     border-bottom: 1px solid #f4f4f4;
-    color: $neutral700;
+    color: #425963;
   }
 
   .title {
-    color: $green500;
+    color: #4ebf1a;
     font-size: 1.2rem;
   }
 
