--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -31,16 +31,14 @@
 
   let lastShortcutsState = undefined;
 
-  import { neutral100, neutral900 } from '@mamba/styles/colors';
-
   export default {
     data() {
       return {
         /** Dialog open state */
         isOpen: false,
         title: undefined,
-        bgColor: neutral100,
-        textColor: neutral900,
+        bgColor: '#e3e6e7',
+        textColor: '#353535',
         align: 'center',
         fullscreen: false,
         className: undefined,
