--- a/packages/components/Input/Keyboard.html
+++ b/packages/components/Input/Keyboard.html
@@ -400,7 +400,7 @@
     z-index: 1;
 
     &.is-active {
-      background-color: $neutral300;
+      background-color: #b5b5b5;
       border-color: #f2f2f2;
     }
 
@@ -408,7 +408,7 @@
       width: 34px;
 
       &.enter-key {
-        background-color: $green500;
+        background-color: #4ebf1a;
       }
     }
 
