--- a/packages/components/Printable/Printable.html
+++ b/packages/components/Printable/Printable.html
@@ -175,7 +175,7 @@
     font-size: 16px;
     line-height: 21px;
     text-align: center;
-    color: $neutral900;
+    color: #353535;
   }
 
   .content {
