--- a/packages/components/Progress/ProgressBar.html
+++ b/packages/components/Progress/ProgressBar.html
@@ -7,12 +7,10 @@
 </div>
 
 <script>
-  import { green500 } from '@mamba/styles/colors';
-
   export default {
     data() {
       return {
-        color: green500,
+        color: '#4ebf1a',
         height: '6px',
         progress: undefined,
       };
@@ -33,7 +31,7 @@
     display: block;
     width: 100%;
     overflow: hidden;
-    background-color: $green500;
+    background-color: #4ebf1a;
   }
 
   .progress {
