--- a/packages/components/Sprite/Loading.html
+++ b/packages/components/Sprite/Loading.html
@@ -2,7 +2,7 @@
 <Sprite {src} width="110px" ref:sprite/>
 
 <script>
-  import loadingSprite from './assets/loading-rebrand.png';
+  import loadingSprite from './assets/loading-sprite.png';
 
   export default {
     components: {
