fix: 🐛 revert remnants

--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -77,7 +77,7 @@
         bgColor: '#fff',
         textColor: '#7e7e7e',
         labelColor: '#7e7e7e',
-        errorColor: red700,
+        errorColor: '#ff1a1a',
         /** Validation */
         validateOn: 'submit',
         validation: undefined,
