--- a/packages/pos/simulator/view/pos/apps/Launcher.html
+++ b/packages/pos/simulator/view/pos/apps/Launcher.html
@@ -213,7 +213,7 @@
   }
 
   time {
-    color: $neutral500;
+    color: $gray;
     display: block;
     margin-top: 35px;
     font-size: 64px;
@@ -228,7 +228,7 @@
 
   .home {
     padding: 5px;
-    background-color: $neutral100;
+    background-color: #e3e6e7;
     font-size: 0;
   }
 
