style: 💄 new variables to examples

--- a/packages/components/App/AdminLock.html
+++ b/packages/components/App/AdminLock.html
@@ -7,7 +7,7 @@
         <td>
           <Button
             secondary
-            bgColor="#425963"
+            bgColor={neutral700}
             width="100%"
             on:click="close()">
               Voltar
