--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -24,7 +24,7 @@
         _isNavigationEnabled: { back: false, home: true },
         _navigableRoute: { routeBack: undefined , paramsBack: undefined },
         title: undefined,
-        textColor: '#425963',
+        textColor: neutral700,
         bgColor: '#f2f2f2',
         border: true,
         _hideAppBar: false,
