--- a/packages/components/Carousel/CarouselNavigation.html
+++ b/packages/components/Carousel/CarouselNavigation.html
@@ -41,7 +41,7 @@
           'http://placehold.it/145x184/f67e7d/fff?text=Component',
         ],
         count: 0,
-        navBg: '#425963',
+        navBg: neutral700,
         navColor: '#ffffff',
         infinity: true,
       };
