--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -234,7 +234,7 @@
   .description {
     &,
     & :global(*) {
-      color: #7e7e7e;
+      color: $neutral-500;
       margin: 4px 0 0;
       font-size: 12px;
       line-height: 16px;
