--- a/packages/components/Collection/example/Example.html
+++ b/packages/components/Collection/example/Example.html
@@ -19,7 +19,7 @@
 
     <Row
       label="Hoje, 13/06/2018"
-      secondaryColor="#4ebf1a"
+      secondaryColor={green500}
       rightLabel="Alterar"
     >
     </Row>
@@ -27,29 +27,29 @@
     <Row
       leftLabel="Hoje, 13/06/2018"
       rightLabel="Alterar"
-      secondaryColor="#4ebf1a"
+      secondaryColor={green500}
     >
       <div slot="left-sign">
-        <Icon symbol="calendar" color="#4ebf1a" />
+        <Icon symbol="calendar" color={green500} />
       </div>
       <div slot="right-sign">
-        <Icon symbol="chevron-right" color="#4ebf1a" width="10px" />
+        <Icon symbol="chevron-right" color={green500} width="10px" />
       </div>
     </Row>
 
     <Row
       label="Conectado"
-      primaryColor="#4ebf1a"
+      primaryColor={green500}
     >
       <div slot="left-sign">
-        <Icon symbol="wifi" color="#4ebf1a" level="2" />
+        <Icon symbol="wifi" color={green500} level="2" />
       </div>
     </Row>
 
     <Row
       label="Conectado"
       primaryColor="white"
-      bgColor="#4ebf1a"
+      bgColor={green500}
     />
 
     <Row label="1 - Opção">
