--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -37,8 +37,8 @@
         /** Dialog open state */
         isOpen: false,
         title: undefined,
-        bgColor: '#e3e6e7',
-        textColor: '#353535',
+        bgColor: neutral100,
+        textColor: neutral900,
         align: 'center',
         fullscreen: false,
         className: undefined,
