--- a/packages/components/Icon/Icon.html
+++ b/packages/components/Icon/Icon.html
@@ -113,7 +113,7 @@
 
   [symbol='wifi'] {
     position: relative;
-    background-color: #b5b5b5;
+    background-color: neutral300;
 
     &::before {
       content: '';
