--- a/packages/components/Progress/ProgressBar.html
+++ b/packages/components/Progress/ProgressBar.html
@@ -31,7 +31,7 @@
     display: block;
     width: 100%;
     overflow: hidden;
-    background-color: #4ebf1a;
+    background-color: $green500;
   }
 
   .progress {
