--- a/packages/components/Range/Range.html
+++ b/packages/components/Range/Range.html
@@ -34,8 +34,8 @@
         value: 0,
         unit: '%',
         validation: undefined,
-        mainColor: '#153522',
-        textColor: '#425963',
+        mainColor: green700,
+        textColor: neutral700,
         barColor: '#000',
       };
     },
@@ -128,7 +128,7 @@
 
   .bar {
     height: 6px;
-    background-color: #153522;
+    background-color: $green700;
   }
 
   button {
