--- a/packages/pos/simulator/view/pos/ControlPanel.html
+++ b/packages/pos/simulator/view/pos/ControlPanel.html
@@ -150,7 +150,7 @@
       width: 100%;
       border-radius: 3px;
       border: none;
-      border-left: 3px solid #e3e6e7;
+      border-left: 3px solid $neutral100;
       padding: 8px 5px;
       transition: background-color 0.3s ease;
     }
