--- a/packages/components/AppBar/example/Example.html
+++ b/packages/components/AppBar/example/Example.html
@@ -7,7 +7,7 @@
 
 <h4>Colorida com Título</h4>
 <div class="row">
-  <AppBar bgColor="#95C93F" textColor="green" title="Stone App"></AppBar>
+  <AppBar bgColor={green500} textColor="green" title="Stone App"></AppBar>
 </div>
 
 </div>
