--- a/packages/components/Button/example/Example.html
+++ b/packages/components/Button/example/Example.html
@@ -16,8 +16,8 @@
 
   <h4>Pequeno</h4>
   <div class="row">
-    <Button size="small" secondary bgColor="#425963">Não</Button>
-    <Button size="small" bgColor="#425963">Sim</Button>
+    <Button size="small" secondary bgColor={neutral700}>Não</Button>
+    <Button size="small" bgColor={neutral700}>Sim</Button>
   </div>
 
   <h4>Tela cheia</h4>
@@ -32,15 +32,15 @@
 
   <h4>Personalizado</h4>
   <div class="row">
-    <Button bgColor="#425963">Label</Button>
+    <Button bgColor={neutral700}>Label</Button>
   </div>
 
   <div class="row">
-    <Button bgColor="#425963" secondary>Label</Button>
+    <Button bgColor={neutral700} secondary>Label</Button>
   </div>
 
   <div class="row">
-    <Button bgColor="#425963" secondary disabled>Label</Button>
+    <Button bgColor={neutral700} secondary disabled>Label</Button>
   </div>
 
   <div class="row">
