--- a/packages/components/Carousel/example/Example.html
+++ b/packages/components/Carousel/example/Example.html
@@ -7,7 +7,7 @@
 
   <h4>Personalizado</h4>
   <div class="row">
-    <Carousel slides={slides} navBg="#4ebf1a" navColor="#425963" />
+    <Carousel slides={slides} navBg={green500} navColor={neutral700} />
   </div>
 
 </div>
