--- a/packages/components/Icon/example/Example.html
+++ b/packages/components/Icon/example/Example.html
@@ -26,7 +26,7 @@
   <h4>Coloridos</h4>
 
   <div class="row">
-      <RoundIcon symbol="alert" color="#4ebf1a" bgColor="#425963" />
+      <RoundIcon symbol="alert" color={green500} bgColor={neutral700} />
   </div>
 
   <h4>Customizados</h4>
