--- a/packages/components/Input/example/Example.html
+++ b/packages/components/Input/example/Example.html
@@ -32,7 +32,7 @@
 
   <h4>Custom colored labeled input</h4>
   <div class="row">
-    <Input bgColor="#b5b5b5" textColor="white" label="Text"/>
+    <Input bgColor={neutral300} textColor="white" label="Text"/>
   </div>
 
   <h4>Validated input</h4>
