--- a/packages/components/QRCode/example/Example.html
+++ b/packages/components/QRCode/example/Example.html
@@ -9,9 +9,9 @@
   </div>
   <h4>Cores, Tamanhos e Logo</h4>
   <div class="row">
-    <QRCode size="small" logo="./static/logo.png" color="#a6df8c" value="http://stone.com.br"/>
-    <QRCode size="medium" logo="./static/logo.png" color="#4ebf1a" value="http://stone.com.br"/>
-    <QRCode size="large" logo="./static/logo.png" color="#153522" value="http://stone.com.br"/>
+    <QRCode size="small" logo="./static/logo.png" color={green300} value="http://stone.com.br"/>
+    <QRCode size="medium" logo="./static/logo.png" color={green500} value="http://stone.com.br"/>
+    <QRCode size="large" logo="./static/logo.png" color={green700} value="http://stone.com.br"/>
   </div>
 </div>
 
