fix: 🐛 missing imports

--- a/packages/components/Carousel/Carousel.html
+++ b/packages/components/Carousel/Carousel.html
@@ -20,6 +20,8 @@
 </div>
 
 <script>
+  import { neutral700 } from '@mamba/styles/colors';
+
   export default {
     components: {
       Icon: '@mamba/icon/Icon.html',
