--- a/packages/components/Range/Range.html
+++ b/packages/components/Range/Range.html
@@ -24,6 +24,8 @@
 </div>
 
 <script>
+  import { green700, neutral700 } from '@mamba/styles/colors';
+
   export default {
     data() {
       return {
