--- a/packages/components/Sprite/Sprite.html
+++ b/packages/components/Sprite/Sprite.html
@@ -1,6 +1,6 @@
 <div
   ref:sprite
-  style="background-position: {_position}px 0px;"
+  style="background-position: {_position - 19}px -17px;"
   class="sprite"
 ></div>
 
