--- a/packages/components/Carousel/CarouselNavigation.html
+++ b/packages/components/Carousel/CarouselNavigation.html
@@ -27,6 +27,8 @@
 </div>
 
 <script>
+  import { neutral700 } from '@mamba/styles/colors';
+
   export default {
     components: {
       Icon: '@mamba/icon/Icon.html',
