--- a/packages/components/Sprite/Loading.html
+++ b/packages/components/Sprite/Loading.html
@@ -1,8 +1,8 @@
 
-<Sprite {src} width="70px" ref:sprite/>
+<Sprite {src} width="110px" ref:sprite/>
 
 <script>
-  import loadingSprite from './assets/loading-sprite.png';
+  import loadingSprite from './assets/loading-rebrand.png';
 
   export default {
     components: {
