fix: 🐛 refix wrong replace

--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -26,7 +26,7 @@
         _isNavigationEnabled: { back: false, home: true },
         _navigableRoute: { routeBack: undefined , paramsBack: undefined },
         title: undefined,
-        textcolor: $neutral700,
+        textcolor: neutral700,
         bgColor: '#f2f2f2',
         border: true,
         _hideAppBar: false,
