--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -40,7 +40,7 @@
         isOpen: false,
         title: undefined,
         bgcolor: $neutral100,
-        textcolor: $neutral900,
+        textcolor: neutral900,
         align: 'center',
         fullscreen: false,
         className: undefined,
