--- a/packages/components/Progress/ProgressBar.html
+++ b/packages/components/Progress/ProgressBar.html
@@ -12,7 +12,7 @@
   export default {
     data() {
       return {
-        color: $green500,
+        color: green500,
         height: '6px',
         progress: undefined,
       };
