--- a/packages/components/Range/Range.html
+++ b/packages/components/Range/Range.html
@@ -36,8 +36,8 @@
         value: 0,
         unit: '%',
         validation: undefined,
-        maincolor: $green700,
-        textcolor: $neutral700,
+        maincolor: green700,
+        textcolor: neutral700,
         barColor: '#000',
       };
     },
