--- a/packages/components/Icon/Round.html
+++ b/packages/components/Icon/Round.html
@@ -3,6 +3,7 @@
 </div>
 
 <script>
+  import { green500 } from '@mamba/styles/colors';
   export default {
     components: {
       Icon: './Icon.html',
@@ -11,7 +12,7 @@
       return {
         iconAttrs: {},
         borderRadius: '50%',
-        bgColor: '#4ebf1a',
+        bgColor: green500,
         color: '#fff',
         size: 'normal',
       };
