fix: 🐛 crash on Dialog

--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -39,7 +39,7 @@
         /** Dialog open state */
         isOpen: false,
         title: undefined,
-        bgcolor: $neutral100,
+        bgcolor: neutral100,
         textcolor: neutral900,
         align: 'center',
         fullscreen: false,
@@ -164,6 +164,7 @@
     left: 0;
     width: 100%;
     bottom: 0;
+    background-color: $neutral100;
 
     :global(.mamba-app.has-appbar) &:not(.is-fullscreen) {
       top: $appbar-height;
